--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "sass": "^1.65.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
